--- a/web/makeReminder.html
+++ b/web/makeReminder.html
@@ -7,11 +7,10 @@
 <div id="app">
     <p> Make a reminder for yourself </p>
     <input type="text" v-model="reminder">
-    <p>In how many milliseconds would you like to be reminder (yes this is a dumb test)</p>
+    <p>In how many milliseconds would you like to get a reminder (yes this is a dumb test)</p>
     <input type="number" v-model="timeToFire">
     <button v-on:click="makeReminder">Make Reminder </button>
-    <p></p>
-    <input type="text" v-model="message"><input>
+    <p>{{message}}</p>
 </div>
 <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
 <script src="https://unpkg.com/vue"></script>
